--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">AccessibilityTest</string>
+    <string name="app_name">USB自动安装</string>
     <string name="des">USB自动安装，ApowerMirror自动同屏</string>
 </resources>
